--- a/examples/sequential_experiment_two_models.ipynb
+++ b/examples/sequential_experiment_two_models.ipynb
@@ -119,11 +119,11 @@
     "    \n",
     "    # calculate the metrics (expected loss)\n",
     "    # this step is optional, for visualization below\n",
-    "    _, losses = calculatemetrics(experiment)\n",
+    "    _, losses = metrics(experiment)\n",
     "    push!(expected_losses, losses)\n",
     "    \n",
     "    # select winner, get \"nothing\" if there is no winner\n",
-    "    winner = selectwinner!(experiment)\n",
+    "    winner = decide!(experiment)\n",
     "    \n",
     "    # stop the experiment if we already find a winner\n",
     "    if winner !== nothing\n",
