change namings of conjugate models

--- a/examples/fixed_vs_sequentail_type_s_error.ipynb
+++ b/examples/fixed_vs_sequentail_type_s_error.ipynb
@@ -65,8 +65,8 @@
    "source": [
     "α = 10\n",
     "β = 90\n",
-    "modelA = BernoulliModel(α, β)\n",
-    "modelB = BernoulliModel(α, β)\n",
+    "modelA = ConjugateBernoulli(α, β)\n",
+    "modelB = ConjugateBernoulli(α, β)\n",
     "models = [modelA, modelB]\n",
     "modelnames = [\"old\", \"new\"];"
    ]
@@ -214,8 +214,8 @@
    "source": [
     "α = 100\n",
     "β = 99900\n",
-    "modelA = BernoulliModel(α, β)\n",
-    "modelB = BernoulliModel(α, β)\n",
+    "modelA = ConjugateBernoulli(α, β)\n",
+    "modelB = ConjugateBernoulli(α, β)\n",
     "models = [modelA, modelB]\n",
     "modelnames = [\"old\", \"new\"];"
    ]
