--- a/examples/sequential_experiment_two_models.ipynb
+++ b/examples/sequential_experiment_two_models.ipynb
@@ -43,8 +43,8 @@
    "source": [
     "α = 1\n",
     "β = 1\n",
-    "modelA = BernoulliModel(α, β)\n",
-    "modelB = BernoulliModel(α, β)\n",
+    "modelA = ConjugateBernoulli(α, β)\n",
+    "modelB = ConjugateBernoulli(α, β)\n",
     "models = [modelA, modelB]\n",
     "modelnames = [\"control\", \"variant 1\"];"
    ]
