change unnest to catbyrow

--- a/examples/sequential_experiment_two_models.ipynb
+++ b/examples/sequential_experiment_two_models.ipynb
@@ -278,7 +278,7 @@
     }
    ],
    "source": [
-    "plot(collect(1:day), unnest(expected_losses), \n",
+    "plot(collect(1:day), catbyrow(expected_losses), \n",
     "    title=\"Expected Losses\",\n",
     "    label=[\"Control\" \"Variant 1\"],\n",
     "    legend=:topleft,)\n",
