instantiate environment in notebooks

--- a/examples/type_s_error.ipynb
+++ b/examples/type_s_error.ipynb
@@ -25,6 +25,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# setup noteoobk environment\n",
+    "import Pkg\n",
+    "Pkg.activate(\".\")\n",
+    "Pkg.instantiate();\n",
+    "\n",
     "using Random\n",
     "using Plots\n",
     "\n",
