--- a/examples/sequential_testing_conjugate_models.ipynb
+++ b/examples/sequential_testing_conjugate_models.ipynb
@@ -13,6 +13,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# setup noteoobk environment\n",
+    "import Pkg\n",
+    "Pkg.activate(\".\")\n",
+    "Pkg.instantiate();\n",
+    "\n",
     "using Random \n",
     "using Plots\n",
     "\n",
