add message in notebook setup

--- a/examples/bayes_factor_optional_stopping.ipynb
+++ b/examples/bayes_factor_optional_stopping.ipynb
@@ -13,7 +13,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# setup noteoobk environment\n",
+    "# Setup notebook running environment.\n",
+    "# Please Be Patient: it might take a long time to \n",
+    "# precompile these packages the first time you run \n",
+    "# this notebook in your local environment.\n",
     "import Pkg\n",
     "Pkg.activate(\".\")\n",
     "Pkg.instantiate();\n",
