update notebook examples

--- a/examples/bayes_factor_optional_stopping.ipynb
+++ b/examples/bayes_factor_optional_stopping.ipynb
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 37,
    "metadata": {
     "scrolled": true
    },
@@ -425,7 +425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -442,6 +442,10 @@
       "|     0.1 |   1.0 |    5.0 |    5000 |       266 |       839 |      0.0532 | 0.1678 |  0.240724 |            55.0 |\n",
       "|     0.1 |   1.0 |    7.0 |    5000 |       247 |      1301 |      0.0494 | 0.2602 |  0.159561 |           122.0 |\n",
       "|     0.1 |   1.0 |   10.0 |    5000 |       184 |      2064 |      0.0368 | 0.4128 | 0.0818505 |           274.5 |\n",
+      "|     0.3 | 0.707 |    3.0 |    5000 |       320 |      2400 |       0.064 |   0.48 |  0.117647 |            26.0 |\n",
+      "|     0.3 | 0.707 |    5.0 |    5000 |       268 |      3908 |      0.0536 | 0.7816 | 0.0641762 |            53.0 |\n",
+      "|     0.3 | 0.707 |    7.0 |    5000 |       220 |      4767 |       0.044 | 0.9534 | 0.0441147 |            91.5 |\n",
+      "|     0.3 | 0.707 |   10.0 |    5000 |       191 |      4990 |      0.0382 |  0.998 | 0.0368655 |           152.0 |\n",
       "|     0.3 |   1.0 |    3.0 |    5000 |       312 |      2386 |      0.0624 | 0.4772 |  0.115641 |            26.0 |\n",
       "|     0.3 |   1.0 |    5.0 |    5000 |       266 |      3951 |      0.0532 | 0.7902 |  0.063078 |            53.5 |\n",
       "|     0.3 |   1.0 |    7.0 |    5000 |       247 |      4752 |      0.0494 | 0.9504 | 0.0494099 |            90.5 |\n",
@@ -457,6 +461,7 @@
     "sim_result |>\n",
     "    @filter(((_.delta_1 == 0.1) .& (_.r == 0.707)) .|\n",
     "            ((_.delta_1 == 0.1) .& (_.r == 1.0))  .|\n",
+    "            ((_.delta_1 == 0.3) .& (_.r == 0.707)) .|\n",
     "            ((_.delta_1 == 0.3) .& (_.r == 1.0)) .|\n",
     "            ((_.delta_1 == 0.3) .& (_.r == 1.414))) |>\n",
     "    @orderby(_.delta_1) |> @thenby(_.r) |> @thenby(_.thresh) |>\n",
@@ -484,7 +489,7 @@
     "Some observations from the visualization below: \n",
     "\n",
     "1. Higher thresholds will lower the Type I error rate.\n",
-    "2. $r$ is the prior standard divation of effect size. For lower value thresholds, lower $r$ value will increase the Type I error. However, as the threshold increases, the $r$ value seems to have smaller impact on the Type I error."
+    "2. Standard deviation of prior of effect size ($r$). For lower value thresholds, lower $r$ value will increase the Type I error. However, as the threshold increases, the $r$ value seems to have smaller impact on the Type I error."
    ]
   },
   {
