include resultig metrics in decide!

--- a/examples/sequential_testing_conjugate_models.ipynb
+++ b/examples/sequential_testing_conjugate_models.ipynb
@@ -131,7 +131,7 @@
     "    push!(expected_losses, losses)\n",
     "    \n",
     "    # select winner, get \"nothing\" if there is no winner\n",
-    "    winner = decide!(experiment)\n",
+    "    winner, _ = decide!(experiment)\n",
     "    \n",
     "    # stop the experiment if we already find a winner\n",
     "    if winner !== nothing\n",
