update docs and examples

--- a/examples/sequential_testing_conjugate_models.ipynb
+++ b/examples/sequential_testing_conjugate_models.ipynb
@@ -119,8 +119,8 @@
     "    dataB = rand(Bernoulli(0.0102), 1000)\n",
     "    \n",
     "    # convert data into statistics\n",
-    "    statsA = BernoulliStatistics(dataA)\n",
-    "    statsB = BernoulliStatistics(dataB)\n",
+    "    statsA = BetaStatistics(dataA)\n",
+    "    statsB = BetaStatistics(dataB)\n",
     "    \n",
     "    # update the models in the experiment with the statistics\n",
     "    update!(experiment, [statsA, statsB])\n",
